Code review suggestions, code cleanup